k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tierlist
  namespace: tierlist
  labels:
    app: tierlist
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: tierlist
