k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tierlist
  namespace: tierlist
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: tierlist.cedricsazos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tierlist
                port:
                  number: 80
  tls:
    - hosts:
        - tierlist.cedricsazos.com
      secretName: tierlist-tls
